--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,11 @@
     @include('partials/header.html')
     @include('partials/hero.html')
     @include('partials/about-section.html')
+    @include('partials/mission.html')
+    @include('partials/services-section.html')
+
+
+
     @include('partials/footer.html')
 
 </body>
