--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,21 @@
 
 <body>
     @include('partials/header.html')
-    @include('partials/hero.html')
-    @include('partials/about-section.html')
-    @include('partials/mission.html')
-    @include('partials/services-section.html')
-
-
-
+    <main>
+        @include('partials/hero.html')
+        @include('partials/about-section.html')
+        @include('partials/mission.html')
+        @include('partials/services-section.html')
+        @include('partials/portfolio-section.html')
+        @include('partials/partners.html')
+        @include('partials/testimonials.html')
+        @include('partials/facts.html')
+        @include('partials/recent-news.html')
+        @include('partials/contacts-section.html')       
+    </main>
     @include('partials/footer.html')
-
+    
+    <script src="js/main.js"></script>
 </body>
 
 </html>
