--- a/src/services-1.html
+++ b/src/services-1.html
@@ -11,6 +11,7 @@
       @include('partials/services-benefits.html')
       @include('partials/partners.html')
       @include('partials/related-projects.html')
+      @include('partials/pricing.html')
       @include('partials/contacts-section.html') 
     </main>
     @include('partials/footer.html')
