допилил верстку десктопа

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 @include('partials/head.html')
 
-<body>
+<body id="page">
     @include('partials/header.html')
     <main>
         @include('partials/hero.html')
