--- a/src/positions.html
+++ b/src/positions.html
@@ -3,7 +3,7 @@
 
 @include('partials/head.html')
 
-<body>
+<body id="page">
     @include('partials/header-1.html')
     <main>
       @include('partials/hero-positions.html')
@@ -12,6 +12,7 @@
       @include('partials/contacts-section.html') 
     </main>
     @include('partials/footer.html')
+    @include('partials/modals.html')
     
     <script src="js/main.js"></script>
 </body>
